--- a/style.css
+++ b/style.css
@@ -6,6 +6,22 @@ body {
     background-image: url("./img/gg.avif");
     /* background-image: url("https://images.unsplash.com/photo-1596622678000-e55d2266ed7e?q=80&w=1931&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"); */
 }
+.process-bar{
+    width: 350px;
+    color: #000 ;
+    background-color: #f1f1f1 ;
+    box-shadow: 2px 2px 20px rgb(0, 0, 0);
+    justify-content: center;
+    margin-left: 20px;
+}
+.process-green{
+    color: #fff ;
+    background-color: #3372ad ;
+}
+.brah {
+    display: flex;
+    align-items: center;
+}
 nav {
     display: flex;
     justify-content: flex-end;
