--- a/style.css
+++ b/style.css
@@ -3,38 +3,58 @@ body {
     margin: 0px;
     padding: 0px;
     flex-direction: column;
-    background-image: url("./img/gg.avif");
-    /* background-image: url("https://images.unsplash.com/photo-1596622678000-e55d2266ed7e?q=80&w=1931&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"); */
 }
-.process-bar{
-    width: 350px;
-    color: #000 ;
-    background-color: #f1f1f1 ;
-    box-shadow: 2px 2px 20px rgb(0, 0, 0);
+
+#myvideo {
+    height: 100vh;
+    width: 100vw;
+    object-fit: cover;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    z-index: -1;
+}
+
+nav {
+    display: flex;
+    justify-content: flex-end;
+}
+
+header {
+    display: flex;
+    align-items: center;
+    padding: 10px 10px;
+    gap: 20px;
     justify-content: center;
-    margin-left: 20px;
 }
-.process-green{
-    color: #fff ;
-    background-color: #3372ad ;
+
+.loading {
+    color: aliceblue;
 }
+
+#un {
+    font-size: 50px;
+    text-transform: uppercase;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
 .brah {
     display: flex;
     align-items: center;
 }
-nav {
-    display: flex;
-    justify-content: flex-end;
 
-}
 #home {
+    display: flex;
+    align-items: center;
     text-decoration: none;
     color: aliceblue;
     padding: 15px;
     margin-right: 100px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-
 }
+
 .cnx {
     background: linear-gradient(to bottom, #000b, #0002, #000b);
     height: 100vh;
@@ -42,54 +62,49 @@ nav {
     padding: 0px;
 
 }
-header {
-    display: flex;
-    align-items: center;
-    padding: 10px 10px;
-    gap: 20px;
-    justify-content:center;
-}
+
 .center {
-    margin-top: 150px;
+    margin-top: 70px;
     align-items: center;
     justify-content: center;
     text-align: center;
 }
-.loading {
-    color: aliceblue;
-}
+
 .txt {
     margin: 0px;
     text-align: center;
-    /* background-color: aqua; */
 }
 
-#un {
-    font-size: 50px;
-    text-transform: uppercase;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    
-}
 p {
     align-items: center;
     justify-content: center;
 
 }
+
 #bar {
     width: 100px;
     height: 60px;
 }
-.ld {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;  
 
-}
 #zero {
     margin-right: 8px;
-        
+
 }
+
+.process-bar {
+    width: 350px;
+    color: #000;
+    background-color: #f1f1f1;
+    box-shadow: 2px 2px 20px rgb(0, 0, 0);
+    justify-content: center;
+    margin-left: 20px;
+}
+
+.process-green {
+    color: #fff;
+    background-color: #3372ad;
+}
+
 #hunred {
     margin-left: 8px;
 }
@@ -99,32 +114,33 @@ p {
     justify-content: center;
     margin-top: 60px;
 }
-.btneiei { 
-    border:0px ridge #000000;
-    border-radius:0px;
-    padding:12px;
-    margin:10px;
-    background-color:#66E5F9;
-    color:#000000;
-    font-weight:normal;
-    opacity:1;
-    transition:1s;
+
+.btneiei {
+    border: 0px ridge #000000;
+    border-radius: 0px;
+    padding: 12px;
+    margin: 10px;
+    background-color: #66E5F9;
+    color: #000000;
+    font-weight: normal;
+    opacity: 1;
+    transition: 1s;
     text-decoration: none;
 
-    } 
+}
+
 .icon {
     display: flex;
     align-items: center;
     justify-content: center;
     margin-top: 55px;
     gap: 25px;
-}    
+}
+
 footer {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 190px;
+    margin-top: 100px;
     color: aliceblue;
 }
-    
-    
